# miditables

./: Cargo.toml  README.md
conf/: miditables.conf
src/: chain.rs  client.rs  config.rs  lib.rs  main.rs  matcher.rs  matchers.rs  plugin.rs  rules.rs  tables.rs  transformer.rs  transformers.rs
src/matchers/: evtype.rs  inport.rs
src/transformers/: debug.rs  output.rs
