[package]

name = "miditables"
version  = "0.1.1"
authors = [ "Calvin Kosmatka <calvin.kosmatka@gmail.com>"]
description = "ALSA MIDI router with iptables style syntax"
keywords = ["ALSA", "midi", "music"]
categories = ["multimedia::audio"]
edition = "2018"

[dependencies]
alsa = { version = "0.4" }
libloading = { version = "0.6" }
